--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,5 @@
 buildscript {
     repositories {
-        jcenter()
-        maven { url = "http://files.minecraftforge.net/maven" }
-    }
-    dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
-    }
-}
-
-if (file('secrets.properties').exists()) {
-	println "Loading parameters from secrets.properties"
-	ext.secrets = new Properties()
-	file('secrets.properties').withReader {secrets.load(it)}
-}
-
-repositories {
     maven { url = "http://chickenbones.net/maven/" }
     maven { url = "http://maven.covers1624.net" }			// CoFH
     maven { url = "http://dvs1.progwml6.com/files/maven" }	// mezz
@@ -25,45 +10,52 @@ repositories {
         name = "CurseForge"
         url = "https://minecraft.curseforge.com/api/maven/"
     }
+	maven { url = "https://files.minecraftforge.net/maven" }
+	}
+    dependencies {
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+    }
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply from: 'configuration.gradle'
 
-sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
+version = "3.6.0.0"
+group = "org.orecruncher.dshuds"
+archivesBaseName = "DynamicSurroundingsHudsCustom"
+
+sourceCompatibility = targetCompatibility = '1.8'
 compileJava {
-    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = targetCompatibility = '1.8'
 }
 
-allprojects {
+minecraft {
+    version = "1.12.2-14.23.5.2847"
+    runDir = "run"
+    mappings = "stable_39"
+}
 
-	minecraft {
-	    runDir = "run"
-	    replace '@VERSION@', project.ext.modVersion
-	    replace '@FINGERPRINT@', project.ext.fingerprint
-	    replace '@UPDATEURL@', project.ext.updateurl
-	    mappings = project.ext.snapshot
+repositories {
+	maven {
+			url = 'https://repo.spongepowered.org/maven'
+			url = "https://cursemaven.com"
 	}
+}
+
+
+
+dependencies {
+		compile files("libs/SereneSeasons-1.12.2-1.2.18-universal.jar")
 	
-	dependencies {
-		compile "serene-seasons:SereneSeasons-1.12.2:1.2.18:universal"
+		compile files("libs/OreLib-1.12.2-3.6.0.1.jar")
 	
-		if (fileTree(dir: 'libs').filter { it.name.startsWith('OreLib') }.getFiles().size() == 0)
-			compile "orelib:OreLib-1.12.2:3.5.2.3:deobf"
-	
-	    //compile "com.github.glitchfiend.biomesoplenty:BiomesOPlenty:1.12.2-7.0.1.2402:deobf"
-	    deobfCompile "mezz.jei:jei_${project.mcVersion}:${project.jeiVersion}:api"
-	    runtime "mezz.jei:jei_${project.mcVersion}:${project.jeiVersion}"
-	    deobfCompile "mcjty.theoneprobe:TheOneProbe-1.12:1.12-1.4.20-12"
+	    compile files("libs/jei_1.12.2-4.16.1.1013.jar")
+	    runtime files("libs/jei_1.12.2-4.16.1.1013.jar")
+	    compile files("libs/theoneprobe-1.12-1.4.28.jar")
 	}
 
-	jar {
-	    manifest {
-	        attributes 'Maven-Artifact': "${project.group}:${project.archivesBaseName}:${project.version}"
-	    }
-	}
-	
-	processResources {
+
+processResources {
 	    // this will ensure that this task is redone when the versions change.
 	    inputs.property "version", project.version
 	    inputs.property "mcversion", project.minecraft.version
@@ -82,63 +74,10 @@ allprojects {
 	    }
 	}
 
-	task sourcesJar(type: Jar) {
-	    description = 'Creates a JAR containing the source code.'
-		dependsOn classes
-	    from sourceSets.main.allSource
-	    classifier = 'sources'
-	}
-	
-	task deobfJar(type: Jar) {
-	    description = 'Creates a JAR containing the non-obfuscated compiled code.'
-	    from sourceSets.main.output
+	jar {
 	    manifest {
 	        attributes 'Maven-Artifact': "${project.group}:${project.archivesBaseName}:${project.version}"
 	    }
-	    classifier = "deobf"
 	}
-	
-	// https://gist.github.com/matthewprenger/9b2da059b89433a01c1c
-	task signJar(type: SignJar, dependsOn: reobfJar) {
-	    onlyIf { // Skip the task if our secret data isn't available
-	        project.hasProperty('keyStore')
-	    }
-	    keyStore = project.keyStore // This needs to be a path to the keystore file
-	    alias = project.keyStoreAlias
-	    storePass = project.keyStorePass
-	    keyPass = project.keyStoreKeyPass
-	    inputFile = jar.archivePath
-	    outputFile = jar.archivePath
-	}
-	
-}
 
-minecraft {
-	if (project.ext.has('secrets')) {
-		if (secrets.uuid != null)
-    		clientRunArgs += ["--uuid ${secrets.uuid}"]
-    	if (secrets.username != null)
-    		clientRunArgs += ["--username ${secrets.username}"]
-    	if (secrets.password != null)
-    		clientRunArgs += ["--password ${secrets.password}"]
-    	if (secrets.jvmArgs != null) {
-    		clientJvmArgs += secrets.jvmArgs
-    		serverJvmArgs += secrets.jvmArgs
-    	}
-    }
-}
 
-jar {
-    // Add CREDITS.md
-    into('/') {
-        from('CREDITS.md')
-    }
-}
-
-//Adds the artifact types added by this script to the actual artifacts list.
-artifacts {
-    archives sourcesJar
-    archives deobfJar
-}
-
-build.dependsOn signJar
